# DecentCISandbox

./: .decent_ci-Linux.yaml  .decent_ci-MacOS.yaml  .decent_ci-Windows.yaml  .decent_ci.yaml  CMakeLists.txt  main.cpp
