cmake_minimum_required(VERSION 3.26)
project(DecentCISandbox)
set(CMAKE_CXX_STANDARD 17)
add_executable(DecentCISandbox main.cpp)
enable_testing()
add_test()
add_test(NAME DecentCISandboxTest COMMAND $<TARGET_FILE:DecentCISandbox> A)
add_test(NAME DecentCISandboxTest COMMAND $<TARGET_FILE:DecentCISandbox> B)
add_test(NAME DecentCISandboxTest COMMAND $<TARGET_FILE:DecentCISandbox> C)
